# bridge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  netlify.toml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  deploy-netlify.yml  main.yml
deploy/: rules.json
examples/: rules.json
src/bridge/: __init__.py  __main__.py  cli.py  core.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_host_expander.py  test_path_converter.py  test_rule_processor.py
