[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-url"
version = "0.1.0"
description = "CLI tool for managing Netlify URL redirections with rule-based JSON configuration"
authors = [{name = "Arkady", email = "arkady@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["netlify", "redirects", "url", "cli", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.8",
    "mypy>=1.11",
    "build>=1.0",
]

test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
]

lint = [
    "ruff>=0.8",
    "mypy>=1.11",
]

[project.scripts]
bridge = "bridge.cli:main"

[project.urls]
Homepage = "https://github.com/arkady/bridge-url"
Repository = "https://github.com/arkady/bridge-url"
Documentation = "https://github.com/arkady/bridge-url#readme"
"Bug Reports" = "https://github.com/arkady/bridge-url/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridge*"]

[tool.setuptools.package-dir]
"" = "src"

# Poethepoetry tasks
[tool.poe.tasks]
# === Development ===
setup = { shell = "python -m venv .venv && source .venv/bin/activate && pip install -e .", help = "Create venv and install package" }
install = { shell = "source .venv/bin/activate && pip install -e .", help = "Install package in development mode" }
dev = { shell = "source .venv/bin/activate && pip install -e .[dev]", help = "Install with development dependencies" }

# === Bridge Commands ===
check = { shell = "source .venv/bin/activate && python -m bridge check --rules examples/rules.json", help = "Validate example rules" }
build = { shell = "source .venv/bin/activate && python -m bridge build --rules examples/rules.json --outdir output", help = "Build artifacts from example rules" }
build-redirects = { shell = "source .venv/bin/activate && python -m bridge build --rules examples/rules.json --outdir output --artifacts redirects", help = "Build only _redirects file" }
build-toml = { shell = "source .venv/bin/activate && python -m bridge build --rules examples/rules.json --outdir output --artifacts toml", help = "Build only netlify.toml file" }

# === Custom rules ===
[tool.poe.tasks.check-rules]
help = "Validate custom rules file"
shell = "source .venv/bin/activate && python -m bridge check --rules ${rules}"
args = [{ name = "rules", help = "Path to rules.json file", required = true }]

[tool.poe.tasks.build-rules]
help = "Build from custom rules file"
shell = "source .venv/bin/activate && python -m bridge build --rules ${rules} --outdir ${outdir} --artifacts ${artifacts}"
args = [
  { name = "rules", help = "Path to rules.json file", required = true },
  { name = "outdir", help = "Output directory", default = "output" },
  { name = "artifacts", help = "Artifacts to generate", default = "both", options = ["redirects", "toml", "both"] }
]

# === Testing ===
test = { shell = "source .venv/bin/activate && pytest tests/ -v", help = "Run all tests" }
test-unit = { shell = "source .venv/bin/activate && pytest tests/unit/ -v", help = "Run unit tests" }
test-integration = { shell = "source .venv/bin/activate && pytest tests/integration/ -v", help = "Run integration tests" }
test-cov = { shell = "source .venv/bin/activate && pytest tests/ --cov=bridge --cov-report=term-missing --cov-report=html", help = "Run tests with coverage" }
test-fast = { shell = "source .venv/bin/activate && pytest tests/unit/ -v -x", help = "Run unit tests (fail fast)" }

# === Code Quality ===
lint = { shell = "source .venv/bin/activate && ruff check src/ tests/", help = "Lint code" }
fix = { shell = "source .venv/bin/activate && ruff check src/ tests/ --fix", help = "Fix linting issues" }
format = { shell = "source .venv/bin/activate && ruff format src/ tests/", help = "Format code with Ruff" }
fmt-check = { shell = "source .venv/bin/activate && ruff format src/ tests/ --check", help = "Check code formatting" }
type = { shell = "source .venv/bin/activate && mypy src/", help = "Type check" }
quality = ["fmt-check", "lint", "type"]
style = { shell = "source .venv/bin/activate && ruff format src/ tests/ && ruff check src/ tests/ --fix", help = "Format and fix all issues" }

# === Build & Deploy ===
package = { shell = "source .venv/bin/activate && python -m build", help = "Build package" }
clean = "rm -rf dist/ .coverage htmlcov/ .pytest_cache/ .mypy_cache/ .ruff_cache/ output/ .venv/"

# === Workflows ===
ready = ["quality", "test-cov", "package"]
ci = ["quality", "test-cov"]
demo = ["check", "build"]


# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit security
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # assert used (OK in tests)
    "T201",  # print statements (OK for CLI)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "T201"]  # Allow assert and print in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"